code/mccomp working parsing.cpp
#include "llvm/ADT/APFloat.h"
#include "llvm/ADT/Optional.h"
#include "llvm/ADT/STLExtras.h"
#include "llvm/IR/BasicBlock.h"
#include "llvm/IR/Constants.h"
#include "llvm/IR/DerivedTypes.h"
#include "llvm/IR/Function.h"
#include "llvm/IR/IRBuilder.h"
#include "llvm/IR/Instructions.h"
#include "llvm/IR/LLVMContext.h"
#include "llvm/IR/LegacyPassManager.h"
#include "llvm/IR/Module.h"
#include "llvm/IR/Type.h"
#include "llvm/IR/Verifier.h"
#include "llvm/Support/FileSystem.h"
#include "llvm/Support/Host.h"
#include "llvm/MC/TargetRegistry.h"
#include "llvm/Support/TargetSelect.h"
#include "llvm/Support/raw_ostream.h"
#include "llvm/Target/TargetMachine.h"
#include "llvm/Target/TargetOptions.h"
#include <algorithm>
#include <cassert>
#include <cctype>
#include <cstdio>
#include <cstdlib>
#include <iostream>
#include <sstream>
#include <map>
#include <memory>
#include <queue>
#include <string.h>
#include <string>
#include <system_error>
#include <utility>
#include <vector>

using namespace llvm;
using namespace llvm::sys;

FILE *pFile;


//===----------------------------------------------------------------------===//
// Lexer
//===----------------------------------------------------------------------===//

// The lexer returns one of these for known things.
enum TOKEN_TYPE {

  IDENT = -1,        // [a-zA-Z_][a-zA-Z_0-9]*
  ASSIGN = int('='), // '='

  // delimiters
  LBRA = int('{'),  // left brace
  RBRA = int('}'),  // right brace
  LPAR = int('('),  // left parenthesis
  RPAR = int(')'),  // right parenthesis
  SC = int(';'),    // semicolon
  COMMA = int(','), // comma

  // types
  INT_TOK = -2,   // "int"
  VOID_TOK = -3,  // "void"
  FLOAT_TOK = -4, // "float"
  BOOL_TOK = -5,  // "bool"

  // keywords
  EXTERN = -6,  // "extern"
  IF = -7,      // "if"
  ELSE = -8,    // "else"
  WHILE = -9,   // "while"
  RETURN = -10, // "return"
  // TRUE   = -12,     // "true"
  // FALSE   = -13,     // "false"

  // literals
  INT_LIT = -14,   // [0-9]+
  FLOAT_LIT = -15, // [0-9]+.[0-9]+
  BOOL_LIT = -16,  // "true" or "false" key words

  // logical operators
  AND = -17, // "&&"
  OR = -18,  // "||"

  // operators
  PLUS = int('+'),    // addition or unary plus
  MINUS = int('-'),   // substraction or unary negative
  ASTERIX = int('*'), // multiplication
  DIV = int('/'),     // division
  MOD = int('%'),     // modular
  NOT = int('!'),     // unary negation

  // comparison operators
  EQ = -19,      // equal
  NE = -20,      // not equal
  LE = -21,      // less than or equal to
  LT = int('<'), // less than
  GE = -23,      // greater than or equal to
  GT = int('>'), // greater than

  // special tokens
  EOF_TOK = 0, // signal end of file

  // invalid
  INVALID = -100 // signal invalid token
};

// TOKEN struct is used to keep track of information about a token
struct TOKEN {
  int type = -100;
  std::string lexeme;
  int lineNo;
  int columnNo;
};

static std::string IdentifierStr; // Filled in if IDENT
static int IntVal;                // Filled in if INT_LIT
static bool BoolVal;              // Filled in if BOOL_LIT
static float FloatVal;            // Filled in if FLOAT_LIT
static std::string StringVal;     // Filled in if String Literal
static int lineNo, columnNo;

static TOKEN returnTok(std::string lexVal, int tok_type) {
  TOKEN return_tok;
  return_tok.lexeme = lexVal;
  return_tok.type = tok_type;
  return_tok.lineNo = lineNo;
  return_tok.columnNo = columnNo - lexVal.length() - 1;
  return return_tok;
}

// Read file line by line -- or look for \n and if found add 1 to line number
// and reset column number to 0
/// gettok - Return the next token from standard input.
static TOKEN gettok() {

  static int LastChar = ' ';
  static int NextChar = ' ';

  // Skip any whitespace.
  while (isspace(LastChar)) {
    if (LastChar == '\n' || LastChar == '\r') {
      lineNo++;
      columnNo = 1;
    }
    LastChar = getc(pFile);
    columnNo++;
  }

  if (isalpha(LastChar) ||
      (LastChar == '_')) { // identifier: [a-zA-Z_][a-zA-Z_0-9]*
    IdentifierStr = LastChar;
    columnNo++;

    while (isalnum((LastChar = getc(pFile))) || (LastChar == '_')) {
      IdentifierStr += LastChar;
      columnNo++;
    }

    if (IdentifierStr == "int")
      return returnTok("int", INT_TOK);
    if (IdentifierStr == "bool")
      return returnTok("bool", BOOL_TOK);
    if (IdentifierStr == "float")
      return returnTok("float", FLOAT_TOK);
    if (IdentifierStr == "void")
      return returnTok("void", VOID_TOK);
    if (IdentifierStr == "bool")
      return returnTok("bool", BOOL_TOK);
    if (IdentifierStr == "extern")
      return returnTok("extern", EXTERN);
    if (IdentifierStr == "if")
      return returnTok("if", IF);
    if (IdentifierStr == "else")
      return returnTok("else", ELSE);
    if (IdentifierStr == "while")
      return returnTok("while", WHILE);
    if (IdentifierStr == "return")
      return returnTok("return", RETURN);
    if (IdentifierStr == "true") {
      BoolVal = true;
      return returnTok("true", BOOL_LIT);
    }
    if (IdentifierStr == "false") {
      BoolVal = false;
      return returnTok("false", BOOL_LIT);
    }

    return returnTok(IdentifierStr.c_str(), IDENT);
  }

  if (LastChar == '=') {
    NextChar = getc(pFile);
    if (NextChar == '=') { // EQ: ==
      LastChar = getc(pFile);
      columnNo += 2;
      return returnTok("==", EQ);
    } else {
      LastChar = NextChar;
      columnNo++;
      return returnTok("=", ASSIGN);
    }
  }

  if (LastChar == '{') {
    LastChar = getc(pFile);
    columnNo++;
    return returnTok("{", LBRA);
  }
  if (LastChar == '}') {
    LastChar = getc(pFile);
    columnNo++;
    return returnTok("}", RBRA);
  }
  if (LastChar == '(') {
    LastChar = getc(pFile);
    columnNo++;
    return returnTok("(", LPAR);
  }
  if (LastChar == ')') {
    LastChar = getc(pFile);
    columnNo++;
    return returnTok(")", RPAR);
  }
  if (LastChar == ';') {
    LastChar = getc(pFile);
    columnNo++;
    return returnTok(";", SC);
  }
  if (LastChar == ',') {
    LastChar = getc(pFile);
    columnNo++;
    return returnTok(",", COMMA);
  }

  if (isdigit(LastChar) || LastChar == '.') { // Number: [0-9]+.
    std::string NumStr;

    if (LastChar == '.') { // Floatingpoint Number: .[0-9]+
      do {
        NumStr += LastChar;
        LastChar = getc(pFile);
        columnNo++;
      } while (isdigit(LastChar));

      FloatVal = strtof(NumStr.c_str(), nullptr);
      return returnTok(NumStr, FLOAT_LIT);
    } else {
      do { // Start of Number: [0-9]+
        NumStr += LastChar;
        LastChar = getc(pFile);
        columnNo++;
      } while (isdigit(LastChar));

      if (LastChar == '.') { // Floatingpoint Number: [0-9]+.[0-9]+)
        do {
          NumStr += LastChar;
          LastChar = getc(pFile);
          columnNo++;
        } while (isdigit(LastChar));

        FloatVal = strtof(NumStr.c_str(), nullptr);
        return returnTok(NumStr, FLOAT_LIT);
      } else { // Integer : [0-9]+
        IntVal = strtod(NumStr.c_str(), nullptr);
        return returnTok(NumStr, INT_LIT);
      }
    }
  }

  if (LastChar == '&') {
    NextChar = getc(pFile);
    if (NextChar == '&') { // AND: &&
      LastChar = getc(pFile);
      columnNo += 2;
      return returnTok("&&", AND);
    } else {
      LastChar = NextChar;
      columnNo++;
      return returnTok("&", int('&'));
    }
  }

  if (LastChar == '|') {
    NextChar = getc(pFile);
    if (NextChar == '|') { // OR: ||
      LastChar = getc(pFile);
      columnNo += 2;
      return returnTok("||", OR);
    } else {
      LastChar = NextChar;
      columnNo++;
      return returnTok("|", int('|'));
    }
  }

  if (LastChar == '!') {
    NextChar = getc(pFile);
    if (NextChar == '=') { // NE: !=
      LastChar = getc(pFile);
      columnNo += 2;
      return returnTok("!=", NE);
    } else {
      LastChar = NextChar;
      columnNo++;
      return returnTok("!", NOT);
      ;
    }
  }

  if (LastChar == '<') {
    NextChar = getc(pFile);
    if (NextChar == '=') { // LE: <=
      LastChar = getc(pFile);
      columnNo += 2;
      return returnTok("<=", LE);
    } else {
      LastChar = NextChar;
      columnNo++;
      return returnTok("<", LT);
    }
  }

  if (LastChar == '>') {
    NextChar = getc(pFile);
    if (NextChar == '=') { // GE: >=
      LastChar = getc(pFile);
      columnNo += 2;
      return returnTok(">=", GE);
    } else {
      LastChar = NextChar;
      columnNo++;
      return returnTok(">", GT);
    }
  }

  if (LastChar == '/') { // could be division or could be the start of a comment
    LastChar = getc(pFile);
    columnNo++;
    if (LastChar == '/') { // definitely a comment
      do {
        LastChar = getc(pFile);
        columnNo++;
      } while (LastChar != EOF && LastChar != '\n' && LastChar != '\r');

      if (LastChar != EOF)
        return gettok();
    } else
      return returnTok("/", DIV);
  }

  // Check for end of file.  Don't eat the EOF.
  if (LastChar == EOF) {
    columnNo++;
    return returnTok("0", EOF_TOK);
  }

  // Otherwise, just return the character as its ascii value.
  int ThisChar = LastChar;
  std::string s(1, ThisChar);
  LastChar = getc(pFile);
  columnNo++;
  return returnTok(s, int(ThisChar));
}

//===----------------------------------------------------------------------===//
// Parser
//===----------------------------------------------------------------------===//

/// CurTok/getNextToken - Provide a simple token buffer.  CurTok is the current
/// token the parser is looking at.  getNextToken reads another token from the
/// lexer and updates CurTok with its results.
static TOKEN CurTok;
static std::deque<TOKEN> tok_buffer;

static TOKEN getNextToken() {

  if (tok_buffer.size() == 0)
    tok_buffer.push_back(gettok());

  TOKEN temp = tok_buffer.front();
  tok_buffer.pop_front();

  return CurTok = temp;
}

static void putBackToken(TOKEN tok) {tok_buffer.push_front(tok);}

// Function to check if a value is a member of an array, used to simplify
// very long if statements
static bool CheckMembership(int arr[], int size, int value) {
  for (int i = 0; i < size; i++) {
    if (arr[i] == value) {
      return true;
    }
  }
  return false;
}

//===----------------------------------------------------------------------===//
// AST nodes
//===----------------------------------------------------------------------===//

/// ASTnode - Base class for all AST nodes.
class ASTnode {
public:
  virtual ~ASTnode() {}
  virtual Value *codegen(int block_index) = 0;
  virtual std::string to_string(std::string ident_level) const {};
};

/// IntASTnode - Class for integer literals like 1, 2, 10
class IntASTnode : public ASTnode {
  int Val;

public:
  IntASTnode(int val) : Val(val) {}
  //virtual Value *codegen() override;
  virtual std::string to_string(std::string ident_level) const override {
      std::ostringstream oss;
      oss << ident_level << Val;
      return oss.str();
  };
  Value *codegen(int block_index) override;
};

// FloatASTNode - Class for float iterals like 1.5, 2.1, 31.5
class FloatASTnode : public ASTnode {
  float Val;

  public:
    FloatASTnode(float val) : Val(val) {}
    virtual std::string to_string(std::string ident_level) const override {
      std::ostringstream oss;
      oss << ident_level << Val;
      return oss.str();
    }
    Value *codegen(int block_index) override;
};

// BoolASTnode - Class for boolean literals true and false 
class BoolASTnode : public ASTnode {
  bool Val;

  public:
    BoolASTnode(bool val) : Val(val) {}
    virtual std::string to_string(std::string ident_level) const override {
      std::ostringstream oss;
      oss << ident_level << Val;
      return oss.str();
    }
    Value *codegen(int block_index) override;
};

// VariableASTnode - Class for referencing a variable like "x"
class VariableASTnode : public ASTnode {
  std::string Name;

  public:
    // Passes in the actual address of the argument name, and we "promise" not to change it with const
    VariableASTnode(const std::string &name) : Name(name) {}
    virtual std::string to_string(std::string ident_level) const override {
      std::ostringstream oss;
      oss << ident_level << Name;
      return oss.str();
    }
    std::string getName() {
      return Name;
    }
    Value *codegen(int block_index) override;
};

class VariableAssignmentASTnode : public ASTnode {
  std::unique_ptr<VariableASTnode> Variable;
  std::unique_ptr<ASTnode> Val;

  public:
    VariableAssignmentASTnode(std::unique_ptr<VariableASTnode> variable, std::unique_ptr<ASTnode> val)
    : Variable(std::move(variable)), Val(std::move(val)) {}
    virtual std::string to_string(std::string ident_level) const override {
      std::ostringstream oss;
      std::string child_ident_level = ident_level + " |-";
      oss << ident_level << "Assigned identifier \n" << Variable->to_string(child_ident_level) << "\n" << Val->to_string(child_ident_level);
      return oss.str();
    }
    Value *codegen(int block_index) override;
};

class VariableDeclarationASTnode : public ASTnode {
  std::string Name;
  std::string Type;

  public:
    VariableDeclarationASTnode(const std::string &name, const std::string &type)
    : Name(name), Type(type) {}
    virtual std::string to_string(std::string ident_level) const override {
      std::ostringstream oss;
      oss << ident_level << "Declared " << Type << " " << Name;
      return oss.str();
    }
    Value *codegen(int block_index) override;
};

class BlockASTnode : public ASTnode {
  std::vector<std::unique_ptr<VariableDeclarationASTnode>> Declarations;
  std::vector<std::unique_ptr<ASTnode>>Statements;

  public:
    BlockASTnode(std::vector<std::unique_ptr<VariableDeclarationASTnode>> declarations, std::vector<std::unique_ptr<ASTnode>> statements)
    : Declarations(std::move(declarations)), Statements(std::move(statements)) {} 
    virtual std::string to_string(std::string ident_level) const override {
      std::ostringstream oss;
      std::string child_ident_level = ident_level + " |-";
      oss << ident_level << "Block";
      for (auto &decl : Declarations) {
        oss << "\n" << decl->to_string(child_ident_level);
      }
      for (auto &stmt : Statements) {
        oss << "\n" << stmt->to_string(child_ident_level);
      }
      return oss.str();
    }
    Value *codegen(int block_index) override;
};

// BinaryASTnode - Class for binary operators like + * - /
class BinaryASTnode : public ASTnode {
  std::string Op; // Stores what operator this is such as + * - /
  std::unique_ptr<ASTnode> LHS,RHS; // Smart pointers for AST nodes of left and right operands

  public:
    BinaryASTnode(const std::string &op, std::unique_ptr<ASTnode> LHS, std::unique_ptr<ASTnode> RHS)
    : Op(op), LHS(std::move(LHS)), RHS(std::move(RHS)) {} // Moves memory from arguments to attributes
    virtual std::string to_string(std::string ident_level) const override {
      std::ostringstream oss;
      std::string child_ident_level = ident_level + " |-";
      oss << ident_level << "Binary operation" << "\n" << LHS->to_string(child_ident_level) << "\n" + child_ident_level << Op << "\n" <<  RHS->to_string(child_ident_level);
      return oss.str();
    }
    Value *codegen(int block_index) override;
};

// Unary operators - and ! ?
class UnaryASTnode : public ASTnode {
  std::string Op; // Stores what operator this is such as ! and ?
  std::unique_ptr<ASTnode> Val; // Smart pointer for AST nodes of operand
  public:
    UnaryASTnode(const std::string &op, std::unique_ptr<ASTnode> val) : Op(op), Val(std::move(val)) {}
    virtual std::string to_string(std::string ident_level) const override {
      std::ostringstream oss;
      std::string child_ident_level = ident_level + " |-";
      oss << ident_level << "Unary operation of " << Op << Val->to_string(child_ident_level);
      return oss.str();
    }
    Value *codegen(int block_index) override;
};

// CallASTnode - Class for function calls such as fib(8)
class CallASTnode : public ASTnode {
  std::string CallFunc; //Name of function thats called
  std::vector<std::unique_ptr<ASTnode>> Args; //Dynamically allocated array of smart pointers to AST objects

  public:
    CallASTnode(const std::string &callfunc, std::vector<std::unique_ptr<ASTnode>> args)
    : CallFunc(callfunc), Args(std::move (args)) {}
    virtual std::string to_string(std::string ident_level) const override {
      std::ostringstream oss;
      std::string child_ident_level = ident_level + " |-";
      oss << ident_level << "Calling function " << CallFunc << " with arguments ";
      for (auto &arg : Args) {
        oss << "\n" << arg->to_string(child_ident_level);
      }
      return oss.str();
    }
    Value *codegen(int block_index) override;
};

class FunctionParamASTnode : public ASTnode {
  std::string Name;
  std::string Type;

  public:
    FunctionParamASTnode(const std::string &name, const std::string &type)
    : Name(name), Type(type) {}
    virtual std::string to_string(std::string ident_level) const override {
      std::ostringstream oss;
      oss << "\n" << ident_level << "Function parameter " << Type << " " << Name;
      return oss.str();
    }
    std::string getName() {
      return Name;
    }
    std::string getType() {
      return Type;
    }
    Value *codegen(int block_index) override;
};

// FunctionPrototypeASTnode - Class for capturing name, and argument names a function takes
class FunctionPrototypeASTnode : public ASTnode {
  std::string Name;
  std::string Type;
  std::vector<std::unique_ptr<FunctionParamASTnode>> Args; //Dynamically allocated array of smart pointers to function parameter AST objects

  public:
    FunctionPrototypeASTnode(const std::string &name, const std::string &type, std::vector<std::unique_ptr<FunctionParamASTnode>> args)
    : Name(name), Type(type), Args(std::move(args)) {}
    virtual std::string to_string(std::string ident_level) const override {
      std::ostringstream oss;
      std::string child_ident_level = ident_level + " |-";
      oss << ident_level << "Function Prototype " << Type << " " << Name << " with parameters ";
      for (auto &arg : Args) {
        oss << arg->to_string(child_ident_level);
      }
      return oss.str();
    }
    std::string getName() {
      return Name;
    }
    std::string getType() {
      return Type;
    }
    std::string getArgType (int index) {
      std::string arg_type = Args[index]->getType();
      return arg_type;
    }
    Function *codegen(int block_index) override;
};

// FunctionDefASTnode - Class for representing function definitions
class FunctionDefASTnode : public ASTnode {
  std::unique_ptr<FunctionPrototypeASTnode> Prototype;
  std::unique_ptr<BlockASTnode> Body;

  public: 
    FunctionDefASTnode(std::unique_ptr<FunctionPrototypeASTnode> prototype, std::unique_ptr<BlockASTnode> body)
    : Prototype(std::move (prototype)), Body(std::move (body)) {}
    virtual std::string to_string(std::string ident_level) const override {
      std::ostringstream oss;
      std::string child_ident_level = ident_level + " |-";
      oss << ident_level << "Function Definition \n" << Prototype->to_string(child_ident_level) << "\n" << Body->to_string(child_ident_level);
      return oss.str();
    }
    Function *codegen(int block_index) override;
};

class ExternASTnode: public ASTnode {
  std::string Name;
  std::string Type;
  std::vector<std::unique_ptr<FunctionParamASTnode>> Params;

  public:
    ExternASTnode(const std::string &name, const std::string &type, std::vector<std::unique_ptr<FunctionParamASTnode>> params)
    : Name(name), Type(type), Params(std::move(params)) {}
    virtual std::string to_string(std::string ident_level) const override {
      std::ostringstream oss;
      std::string child_ident_level = ident_level + " |-";
      oss << ident_level << "Extern " << Type << " " << Name << " with parameters";
      for (auto &param : Params) {
        oss << param->to_string(child_ident_level);
      }
      oss << "\n";
      return oss.str();
    }
    Function *codegen(int block_index) override;
};

class IfExprASTnode : public ASTnode {
  std::unique_ptr<ASTnode> Cond;
  std::unique_ptr<BlockASTnode> Then, Else;

  public:
    IfExprASTnode(std::unique_ptr<ASTnode> Cond, std::unique_ptr<BlockASTnode> Then,
                  std::unique_ptr<BlockASTnode> Else)
                  : Cond(std::move(Cond)), Then(std::move(Then)), Else(std::move(Else)) {}
    virtual std::string to_string(std::string ident_level) const override {
      std::ostringstream oss;
      std::string child_ident_level = ident_level + " |-";
      oss << ident_level << "If \n" << Cond->to_string(child_ident_level) << "\n" << Then->to_string(child_ident_level);
      if (Else != nullptr) {
        oss << "\n" << Else->to_string(child_ident_level);
      }
      return oss.str();
    }
    Value *codegen(int block_index) override;
};

class WhileExprASTnode : public ASTnode {
  std::unique_ptr<ASTnode> Cond, Then;

  public:
    WhileExprASTnode(std::unique_ptr<ASTnode> Cond, std::unique_ptr<ASTnode> Then)
                    : Cond(std::move(Cond)), Then(std::move(Then)) {}
    virtual std::string to_string(std::string ident_level) const override {
      std::ostringstream oss;
      std::string child_ident_level = ident_level + " |-";
      oss << ident_level << "While \n" << Cond->to_string(child_ident_level) << "\n" << Then->to_string(child_ident_level);
      return oss.str();
    }
    Value *codegen(int block_index) override;
};

class ReturnExprASTnode : public ASTnode {
  std::unique_ptr<ASTnode> ReturnValue;

  public:
    ReturnExprASTnode(std::unique_ptr<ASTnode> returnvalue) : ReturnValue(std::move(returnvalue)) {}
    virtual std::string to_string(std::string ident_level) const override {
      std::ostringstream oss;
      std::string child_ident_level = ident_level + " |-";;
      oss << ident_level << "Return expression";
      if (ReturnValue != nullptr) {
        oss << "\n" << ReturnValue->to_string(child_ident_level);
      }
      return oss.str();
    }
    Value *codegen(int block_index) override;
};

class RootASTnode : public ASTnode {
  std::vector<std::unique_ptr<ExternASTnode>> Ext_List;
  std::vector<std::unique_ptr<ASTnode>> Decl_List;

  public:
    RootASTnode(std::vector<std::unique_ptr<ExternASTnode>> ext_list, std::vector<std::unique_ptr<ASTnode>> decl_list)
    : Ext_List(std::move(ext_list)), Decl_List(std::move(decl_list)) {}
    virtual std::string to_string(std::string ident_level) const override {
      std::ostringstream oss;
      std::string child_ident_level = ident_level + " |-";
      oss << ident_level << "Program root \n";
      for (auto &ext : Ext_List) {
        oss << ext->to_string(child_ident_level);
      }
      for (auto &decl : Decl_List) {
        oss << decl->to_string(child_ident_level);
      }
      return oss.str();
    }
    Value *codegen(int block_index) override;
};

/* add other AST nodes as nessasary */

//===----------------------------------------------------------------------===//
// Recursive Descent Parser - Function call for each production
//===----------------------------------------------------------------------===//

// Helper functions for error handling - taken from llvm tutorial
std::unique_ptr<ASTnode> LogError(std::string Str) {
  fprintf(stderr, "\nLogError: %s\n\n", Str.c_str());
  return nullptr;
}
std::unique_ptr<FunctionPrototypeASTnode> LogErrorP(std::string Str) {
  LogError(Str);
  return nullptr;
}

/* Add function calls for each production */


// Function declarations
static std::unique_ptr<RootASTnode> ParseProgram();
static std::vector<std::unique_ptr<ExternASTnode>> ParseExternList();
static std::vector<std::unique_ptr<ASTnode>> ParseDeclList();
static std::unique_ptr<ExternASTnode> ParseExtern();
static std::vector<std::unique_ptr<ExternASTnode>> ParseExternListPrime(std::vector<std::unique_ptr<ExternASTnode>> ext_list);
static std::string ParseTypeSpec();
static std::vector<std::unique_ptr<FunctionParamASTnode>> ParseParams();
static std::string ParseVarType();
static std::vector<std::unique_ptr<FunctionParamASTnode>> ParseParamList();
static std::unique_ptr<FunctionParamASTnode> ParseParam();
static std::vector<std::unique_ptr<FunctionParamASTnode>> ParseParamListPrime(std::vector<std::unique_ptr<FunctionParamASTnode>> params);
static std::unique_ptr<ASTnode> ParseDecl();
static std::vector<std::unique_ptr<ASTnode>> ParseDeclListPrime(std::vector<std::unique_ptr<ASTnode>> decl_list);
static std::unique_ptr<FunctionDefASTnode> ParseVoidFunDecl();
static std::unique_ptr<ASTnode> ParseTypeNameDecl();
static std::unique_ptr<BlockASTnode> ParseBlock();
static std::unique_ptr<FunctionDefASTnode> ParseVarFunDecl(std::string type, std::string identifier);
static std::vector<std::unique_ptr<VariableDeclarationASTnode>> ParseLocalDecls();
static std::vector<std::unique_ptr<ASTnode>> ParseStmtList();
static std::unique_ptr<VariableDeclarationASTnode> ParseLocalDecl();
static std::vector<std::unique_ptr<VariableDeclarationASTnode>> ParseLocalDeclsPrime(std::vector<std::unique_ptr<VariableDeclarationASTnode>> declarations);
static std::unique_ptr<ASTnode> ParseStmt();
static std::vector<std::unique_ptr<ASTnode>> ParseStmtListPrime(std::vector<std::unique_ptr<ASTnode>> stmt_list);
static std::unique_ptr<ASTnode> ParseExprStmt();
static std::unique_ptr<IfExprASTnode> ParseIf();
static std::unique_ptr<WhileExprASTnode> ParseWhile();
static std::unique_ptr<ReturnExprASTnode> ParseReturn();
static std::unique_ptr<ASTnode> ParseExpr();
static std::unique_ptr<ASTnode> ParseRval();
static std::unique_ptr<BlockASTnode> ParseElse();
static std::unique_ptr<ASTnode> ParseRvalOne();
static std::unique_ptr<BinaryASTnode>  ParseRvalPrime(std::unique_ptr<ASTnode> lhs);
static std::unique_ptr<ASTnode> ParseRvalTwo();
static std::unique_ptr<BinaryASTnode> ParseRvalOnePrime(std::unique_ptr<ASTnode> lhs);
static std::unique_ptr<ASTnode> ParseRvalThree();
static std::unique_ptr<BinaryASTnode> ParseRvalTwoPrime(std::unique_ptr<ASTnode> lhs);
static std::unique_ptr<ASTnode> ParseRvalFour();
static std::unique_ptr<BinaryASTnode> ParseRvalThreePrime(std::unique_ptr<ASTnode> lhs);
static std::unique_ptr<ASTnode> ParseRvalFive();
static std::unique_ptr<BinaryASTnode> ParseRvalFourPrime(std::unique_ptr<ASTnode> lhs);
static std::unique_ptr<ASTnode> ParseRvalSix();
static std::unique_ptr<BinaryASTnode> ParseRvalFivePrime(std::unique_ptr<ASTnode> lhs);
static std::unique_ptr<ASTnode> ParseRvalSeven();
static std::unique_ptr<ASTnode> ParseRvalEight();
static std::unique_ptr<ASTnode> ParseRvalNine();
static std::vector<std::unique_ptr<ASTnode>> ParseArgs();
static std::vector<std::unique_ptr<ASTnode>> ParseArgList();
static std::vector<std::unique_ptr<ASTnode>> ParseArgListPrime(std::vector<std::unique_ptr<ASTnode>> args);

// program_prime ::= program eof
static std::unique_ptr<RootASTnode> parser() {
  // Root of the parser and AST tree, prepares first token, creates root ast node, and calls first production
  CurTok = getNextToken();
  std::unique_ptr<RootASTnode> program;
  if (CurTok.type != EOF_TOK){
    program = ParseProgram();
    return std::move(program);
  }
  return nullptr;
}

// program ::= extern_list decl_list
//          | decl_list
static std::unique_ptr<RootASTnode> ParseProgram() {
  // Creates dynamically allocated arrays for both externs and declarations
  std::vector<std::unique_ptr<ExternASTnode>> ext_list;
  std::vector<std::unique_ptr<ASTnode>> decl_list;
  // Checks if current token is in FIRST set of extern_list or decl_list
  // Calls appropriate procedures for productions
  if (CurTok.type == EXTERN) {
    ext_list = ParseExternList();
    decl_list = ParseDeclList();
  } else if (CurTok.type == INT_TOK || CurTok.type == FLOAT_TOK || CurTok.type == BOOL_TOK || CurTok.type == VOID_TOK) {
    decl_list = ParseDeclList();
  } else {
    throw LogError("Syntax Error: Expected extern for extern or type int, float, bool, or void");
  }
  // Creates root AST node and returns
  std::unique_ptr<RootASTnode> root = std::make_unique<RootASTnode>(std::move(ext_list), std::move(decl_list));
  return std::move(root);
}

// extern_list ::= extern extern_list_prime
static std::vector<std::unique_ptr<ExternASTnode>> ParseExternList() {
  // Creates AST node for first extern and dynamically allocated array of AST nodes for next externs
  std::unique_ptr<ExternASTnode> ext;
  std::vector<std::unique_ptr<ExternASTnode>> ext_list;
  // Calls procedures corresponding to production in order
  ext = ParseExtern();
  // After receiving first extern, moves it to front of extern list
  ext_list.push_back(std::move(ext));
  // Extern list with first extern is passed to production which generates further externs
  ext_list = ParseExternListPrime(std::move(ext_list));
  return(std::move(ext_list));
}

// extern_list_prime ::= extern extern_list_prime
//                    | epsilon
static std::vector<std::unique_ptr<ExternASTnode>> ParseExternListPrime(std::vector<std::unique_ptr<ExternASTnode>> ext_list) {
  // Checks if next token is extern or if in the follow set of extern_list_prime, otherwise, throws error
  if (CurTok.type == EXTERN) {
    // Creates AST node for new extern and assigns to it by calling ParseExtern production
    std::unique_ptr<ExternASTnode> ext;
    ext = ParseExtern();
    // Pushes new extern onto end of extern list
    ext_list.push_back(std::move(ext));
    // Extern list passed to production recursively to generate further externs
    ext_list = ParseExternListPrime(std::move(ext_list));
    return std::move(ext_list);
  } else if (CurTok.type == VOID_TOK || CurTok.type == INT_TOK || CurTok.type == FLOAT_TOK || CurTok.type == BOOL_TOK) {
    // Current token is in the FOLLOW set of extern_list_prime, so we return and stop generating externs here
    return std::move(ext_list); 
  } else {
    throw LogError("Syntax Error: Expected an extern or declaration after extern");
  }
}
